--- a/mysite/templates/photos/success.html
+++ b/mysite/templates/photos/success.html
@@ -2,17 +2,15 @@
 <html>
 <body>
 
-<h2>Media Display</h2>
+<h2>Image Display</h2>
 
 
-
-
-<img src="/media/images/{{filename}}" alt="{{filename}}" width="500" height="600">
+<img src="/media/images/{{filename_img}}" alt="{{filename_img}}" width="500" height="400">
 <br>
 
 <h2>Video Display</h2>
 
-<video width="320" height="240" controls autoplay alt = "" src="/media/images/{{filename}}" type="video/mp4">
+<video width="320" height="240" controls autoplay alt = "" src="/media/images/{{filename_vid}}" type="video/mp4">
 </video>
 
 </body>
